--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 pyinstaller~=6.9.0
 pandas~=2.2.2
 future~=0.18.3
-ttkthemes~=3.2.2
 openpyxl~=3.1.2
 telethon~=1.36.0
+pyqt5~=5.15.4
+markdown~=3.3.4
+requests[socks]~=2.32.3
