fix: pyinstaller打包时缺少资源问题

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -24,7 +24,7 @@ jobs:
 
       - name: 打包应用
         run: |
-          pyinstaller -F main.py -n telegram_info_export
+          pyinstaller -F main.py -n telegram_info_export --add-data "assets\logo.png;assets" --add-data "app\about.md;app" --add-data "style\style.qss;style"
 
       - name: 上传发布资源
         uses: actions/upload-release-asset@v1
